depends_compile_tests/tests/fail/derive/dependencies/enum.stderr
error: expected `struct`
 --> tests/fail/derive/dependencies/enum.rs:4:1
  |
4 | enum Bar {
  | ^^^^
